# Tensorium_MLIR

./: .gitignore  CITATION.cff  CMakeLists.txt  README.md  add  add.ll  add.mlir  adm_2d.csv  build.sh  dialect.td  lowered.ll  lowered.mlir  main.c  main.cc  shell.nix  test.cpp  test.mlir  test_metric
.cache/clangd/index/: ASTToMLIR.cpp.40DADDB1D47CD7C7.idx  Dialect.h.3C7FF08439FDD21F.idx  Dialect.h.A9BB203C8723CE89.idx  LatexToAST.cpp.F3F845DB898EDE63.idx  MlirOptMainWrapper.cpp.D9C34AE330574377.idx  RelativityDialect.cpp.D652D68A92871C06.idx  RelativityDialect.cpp.E8B2AC105C3FF3EA.idx  RelativityOps.cpp.C136D2D64C75087A.idx  RelativityOps.h.AD9456DB2CBE1DB7.idx  SimplifyDerivs.cpp.B26555D7F6ED2F78.idx  relativity-opt.cpp.0B6B958E70B7364F.idx  relativity-opt.cpp.518C7186AF09AA59.idx
Tensorium_Tex/: AST_Utils.hpp  CMakeLists.txt  CmakeLists.txt  Codegen.py  Lower_MLIR_to_LLVM.sh  Makefile  Parser.cpp  Tensorium_AST.hpp  Tensorium_Tensor_Index.hpp  Tensorium_Tex.hpp  main_test.cpp  test.cpp  test.tex  test_metric_codegen.py  test_metrics  tmp.mlir
Tensorium_Tex/lib/Backend/: ASTSimplifyforDialect.hpp  EmitDialect.cpp  EmitDialect.hpp  MLIRBackend.cpp  MLIRBackend.hpp  Utils.cpp  Utils.hpp
Tensorium_Tex/lib/Frontend/: CMakeLists.txt  Parser.cpp  Tensorim_simplify.hpp  Tensorium_AST.hpp  Tensorium_Tex.hpp
Tensorium_Tex/lib/Tensor/: Tensor.hpp
Tensorium_Tex/lib/Utils/: MetricExtract.cpp  MetricExtract.hpp  MetricUtils.cpp
Tensorium_Tex/metric_codegen/backends/: cpp.py  mlir.py  numpy.py
Tensorium_Tex/metric_codegen/frontends/: christoffel.py  driver.py  latex.py  metric_tensor.py
Tensorium_Tex/metric_codegen/optim/: cse.py  simplify.py
Tensorium_Tex/srcs/: tensorium-tex.cpp
include/: CMakeLists.txt
include/Relativity/: AssembleMetricTensorPass.h  CMakeLists.txt  Dialect.h  Ops.td  RelAddCInterfacePass.h  RelExpandMetricPass.h  RelLinAlgLowering.h  RelativityBase.td  RelativityDialect.h  RelativityDialect.td  RelativityLoweringPass.h  RelativityOps.h  RelativityOps.td  RelativitySimplifyPass.h  TensorOps.td
include/Relativity/Frontend/: AST_Utils.hpp  Tensorim_simplify.hpp  Tensorium_AST.hpp  Tensorium_Tex.hpp
include/Runtime/: TensoriumRuntime.h
lib/: CMakeLists.txt  RelativityDialect.cpp  RelativityDialect.td  RelativityOps.cpp
lib/CompilerHandler/: CMakeLists.txt  CmakeLists.txt  PragmaHandler.cpp  PragmaHandler.h
lib/CompilerHandler/Backend/: CMakeLists.txt  DumpTensoriumGpuFuncs.cpp
lib/CompilerHandler/Frontend/: CMakeLists.txt  PragmaHandler.cpp  PragmaHandler.h
lib/Conversion/: ASTToMLIR.cpp  CMakeLists.txt
lib/Parser/: CMakeLists.txt  LatexToAST.cpp
lib/Relativity/: AssembleMetricTensorPass.cpp  AssembleMetricTensorPass.h  CMakeLists.txt  RelExpandMetricPass.cpp  RelExpandMetricPass.h  RelExtractSpatialPass.cpp  RelExtractSpatialPass.h  RelativityDialect.cpp  RelativityLoweringPass.cpp  RelativityLoweringPass.h  RelativityOps.cpp  RelativitySimplifyPass.cpp  RelativitySimplifyPass.h
lib/Relativity/Frontend/: Parser.cpp
lib/Relativity/LinearAlgebra/: CMakeLists.txt  RelLinAlgLowering.cpp
lib/Relativity/RelAddCInterfacePass/: CMakeLists.txt  RelAddCInterfacePass.cpp
lib/Relativity/Utils/: CMakeLists.txt  FormulaParser.cpp  FormulaParser.h  MetricExtract.cpp  MetricUtils.cpp
lib/Transforms/: CMakeLists.txt  SimplifyDerivs.cpp
python/: CMakeLists.txt  RelativityModule.cpp  RuntimeBinding.cpp
python/Tensorium/: __init__.py  compiler.py  runtime.py
python/Tensorium/dialects/: relativity.py
python/mlir/dialects/: relativity.py
relativity-opt/: CMakeLists.txt  relativity-opt.cpp
srcs/dialect/Relativity/: RelativityOps.td
srcs/frontend/: LatexToMLIR.py
test/: CMakeLists.txt  PragmaTest.ll  PragmaTest.rewritten.cpp  buildtest.sh  lit.cfg.py  lit.site.cfg.py.in  test_opt.mlir
test/CompilerHandler/: PragmaTest.cpp
test/Relativity/: CMakeLists.txt  Conformal_metric.mlir  ScharzschildKS.mlir  ScharzschildKS_spatial.mlir  add_runtime.mlir  dummy.mlir  foo.mlir  lowered.mlir  out.mlir  output_symbolic.mlir  test.cpp  test_expand_metric_3p1.mlir  test_grid.mlir  test_grid_cpp.cpp  test_kerr_from_tex.cpp  test_linealg.mlir  test_memref_stride.cpp  test_memref_stride_api.cpp  test_metricOps.mlir  test_metric_get.mlir  test_metric_spatial.mlir  test_python_binding.py  test_python_isosurface.py
test/Relativity/Texfiles/: test1.tex  test6.tex  test7.tex
test/tensorium_export/: _Z10overloadedd_tensorium_gpu.ll  _Z10proto_funcv_tensorium_gpu.ll  _Z14compute_energyddi_tensorium_gpu.ll  _Z19test_simd_intrinsicv_tensorium_gpu.ll  _Z3barv_tensorium_gpu.ll  _Z3bazi_tensorium_gpu.ll  _Z3foov_tensorium_gpu.ll  _Z3quxdi_tensorium_gpu.ll  _mm_add_ps_tensorium_cpu.cpp  _mm_set1_ps_tensorium_cpu.cpp  _mm_storeu_ps_tensorium_cpu.cpp  bar_tensorium_gpu.cpp  bar_tensorium_gpu.ll  baz_tensorium_gpu.cpp  baz_tensorium_gpu.ll  compute_energy_tensorium_gpu.cpp  compute_energy_tensorium_gpu.ll  foo_tensorium_gpu.cpp  foo_tensorium_gpu.ll  inlinefunc_tensorium_gpu.cpp  inlinefunc_tensorium_gpu.ll  overloaded_tensorium_gpu.cpp  overloaded_tensorium_gpu.ll  proto_func_tensorium_gpu.cpp  proto_func_tensorium_gpu.ll  qux_tensorium_gpu.cpp  qux_tensorium_gpu.ll  staticfunc_tensorium_gpu.cpp  staticfunc_tensorium_gpu.ll  test_simd_intrinsic_tensorium_gpu.cpp  test_simd_intrinsic_tensorium_gpu.ll
tests/: lit.cfg.py
tests/latex/: minkowski.tex
tests/mlir/: minkowski_generated.mlir
tools/: CMakeLists.txt  relativity-opt.cpp
tools/tensorium-tex/: tensorium-tex.cpp
